<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr3"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">


    <ImageView

        android:layout_width="278dp"
        android:layout_height="151dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/registraicone"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edittextusername"
        android:layout_width="187dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/edittextpassword"
        android:layout_width="187dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/Password" />


    <EditText
        android:id="@+id/edittextconfpassword"
        android:layout_width="187dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_password"

        android:hint="@string/confpassword" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="#ffff" />




    </LinearLayout>


